# pipecat-deepfake-bot

./: .gitignore  Dockerfile  README.md  bot.py  deepfake.py  env.example  pcc-deploy.toml  pyproject.toml
